--- a/index.html
+++ b/index.html
@@ -6,11 +6,47 @@
     <title>Alocador de Professores Substitutos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-slate-50 text-slate-800">
 
-    <div class="container mx-auto p-4 md:p-8">
+    <!-- Tela de Login -->
+    <div id="login-screen" class="fixed inset-0 z-[100] flex items-center justify-center bg-slate-100 p-4 transition-opacity duration-500">
+        <div class="w-full max-w-sm">
+            <div class="text-center mb-8">
+                <h1 class="text-3xl font-bold text-slate-700 font-poppins">Bem-vindo(a)</h1>
+                <p class="text-slate-500 mt-1">Acesse o Alocador de Professores</p>
+            </div>
+            <form id="login-form" class="space-y-6">
+                <div>
+                    <label for="username" class="block text-sm font-medium text-slate-700">Usuário</label>
+                    <div class="mt-1">
+                        <input id="username" name="username" type="text" required class="w-full p-3 border border-slate-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 transition">
+                    </div>
+                </div>
+                <div>
+                    <label for="password" class="block text-sm font-medium text-slate-700">Senha</label>
+                    <div class="mt-1 relative">
+                        <input id="password" name="password" type="password" required class="w-full p-3 pr-10 border border-slate-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 transition">
+                        <button type="button" id="toggle-password-visibility" class="absolute inset-y-0 right-0 flex items-center pr-3 text-slate-400 hover:text-slate-600 rounded-full" title="Mostrar/Ocultar senha"></button>
+                    </div>
+                </div>
+                <p id="login-error" class="text-sm text-red-600 hidden">Usuário ou senha inválidos.</p>
+                <div>
+                    <button type="submit" class="w-full flex justify-center py-3 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all">Entrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Tela de Boas-Vindas -->
+    <div id="welcome-screen" class="hidden fixed inset-0 z-[90] flex items-center justify-center bg-slate-900 p-4">
+        <h2 id="welcome-message" class="text-2xl md:text-4xl font-bold text-white text-center"></h2>
+    </div>
+
+    <div id="main-app" class="container mx-auto p-4 md:p-8 opacity-0 transition-opacity duration-500">
         <header class="relative text-center mb-8">
             <div class="flex items-center justify-center">
                 <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-700 flex items-center justify-center gap-3">
@@ -40,13 +76,19 @@
                         </select>
                     </div>
                     <div>
-                        <label for="absent-teacher" class="block text-sm font-medium text-slate-700 mb-1">2. Professor Ausente</label>
-                        <select id="absent-teacher" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500" disabled>
-                            <option value="">Selecione uma área</option>
-                        </select>
+                        <label for="absent-teachers" class="block text-sm font-medium text-slate-700 mb-1">2. Professor(es) Ausente(s)</label>
+                        <div id="custom-multiselect-container" class="relative">
+                            <div id="absent-teachers-button" class="multiselect-button w-full p-2 border border-slate-300 rounded-lg shadow-sm bg-slate-100 text-slate-500 cursor-not-allowed flex items-center justify-between" aria-disabled="true">
+                                <span id="absent-teachers-display" class="truncate">Selecione uma área</span>
+                                <svg class="h-5 w-5 text-slate-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 3a.75.75 0 01.55.83l-3.25 9.5a.75.75 0 11-1.44-.49L8.46 4.2A.75.75 0 0110 3z" clip-rule="evenodd" /></svg>
+                            </div>
+                            <div id="absent-teachers-dropdown" class="hidden absolute z-10 mt-1 w-full bg-white shadow-lg max-h-60 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm">
+                                <!-- Opções com checkboxes serão populadas pelo JS -->
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <label for="absence-day" class="block text-sm font-medium text-slate-700 mb-1">3. Dia da Ausência</label>
+                        <label for="absence-day" class="block text-sm font-medium text-slate-700 mb-1">3. Dia</label>
                         <select id="absence-day" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
                             <option value="">Selecione um dia</option>
                             <option value="Segunda">Segunda-feira</option>
@@ -56,7 +98,23 @@
                             <option value="Sexta">Sexta-feira</option>
                         </select>
                     </div>
-                    <div class="flex items-end pt-2">
+                    <div>
+                        <label for="absence-period" class="block text-sm font-medium text-slate-700 mb-1">4. Período</label>
+                        <select id="absence-period" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                            <option value="all">Dia Inteiro</option>
+                            <option value="morning">Apenas Manhã</option>
+                            <option value="afternoon">Apenas Tarde</option>
+                        </select>
+                    </div>
+                    <div class="md:col-span-3 flex items-end pt-2">
+                        <div class="flex items-center">
+                            <input id="no-tcc-week-checkbox" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+                            <label for="no-tcc-week-checkbox" class="ml-2 block text-sm font-medium text-slate-700">
+                                Semana sem TCC (aumenta o limite de substituição em +1)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="flex items-end pt-2 ">
                         <button id="find-substitute-btn" class="w-full bg-indigo-600 text-white font-semibold py-2.5 px-4 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
@@ -146,6 +204,10 @@
                         <option value="all">Filtrar por todas as áreas</option>
                         <!-- Opções de área serão populadas por JS -->
                     </select>
+                </div>
+                <div id="schedule-chart-container" class="mt-6 mb-8 p-4 border rounded-lg bg-slate-50/50">
+                    <h4 class="text-lg font-semibold text-slate-700 mb-3">Gráfico de Carga Horária Semanal</h4>
+                    <canvas id="workload-chart"></canvas>
                 </div>
                 <div id="schedule-grid-container" class="mt-6 overflow-x-auto">
                     <!-- A grade horária será inserida aqui -->
