--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Alocador de Professores Substitutos</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
@@ -47,13 +48,13 @@
     </div>
 
     <div id="main-app" class="container mx-auto p-4 md:p-8 opacity-0 transition-opacity duration-500">
-        <header class="relative text-center mb-8">
-            <div class="flex items-center justify-center">
-                <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-700 flex items-center justify-center gap-3">
+        <header class="mb-8">
+            <div class="flex items-center justify-between">
+                <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-700 flex items-center gap-3">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
                     <span>Alocador de Professores</span>
                 </h1>
-                <div class="absolute right-0 top-1/2 -translate-y-1/2 flex items-center gap-2">
+                <div class="flex items-center gap-1 sm:gap-2">
                     <button id="open-schedule-btn" class="p-2 text-slate-500 hover:text-indigo-600 hover:bg-slate-200 rounded-full transition-colors" title="Ver Grade Horária Geral">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" /></svg>
                     </button>
@@ -62,12 +63,12 @@
                     </button>
                 </div>
             </div>
-            <p class="text-sm sm:text-base text-slate-500 mt-2">Encontre substitutos de forma rápida e inteligente.</p>
+            <p class="text-sm sm:text-base text-slate-500 mt-2 text-center sm:text-left">Encontre substitutos de forma rápida e inteligente.</p>
         </header>
 
         <main>
             <!-- Painel de Controle -->
-            <div class="bg-white/70 backdrop-blur-xl p-6 rounded-xl shadow-lg mb-8 border border-slate-200">
+            <div class="bg-white/70 backdrop-blur-xl p-4 sm:p-6 rounded-xl shadow-lg mb-8 border border-slate-200">
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
                     <div>
                         <label for="area-filter" class="block text-sm font-medium text-slate-700 mb-1">1. Filtrar por Área</label>
@@ -106,21 +107,26 @@
                             <option value="afternoon">Apenas Tarde</option>
                         </select>
                     </div>
-                    <div class="md:col-span-3 flex items-end pt-2">
-                        <div class="flex items-center">
+                    <div class="md:col-span-4 grid grid-cols-1 sm:grid-cols-3 gap-4 pt-2">
+                        <div class="sm:col-span-1 flex items-center">
                             <input id="no-tcc-week-checkbox" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
                             <label for="no-tcc-week-checkbox" class="ml-2 block text-sm font-medium text-slate-700">
-                                Semana sem TCC (aumenta o limite de substituição em +1)
+                                Semana sem TCC (+1 limite)
                             </label>
                         </div>
-                    </div>
-                    <div class="flex items-end pt-2 ">
-                        <button id="find-substitute-btn" class="w-full bg-indigo-600 text-white font-semibold py-2.5 px-4 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                            </svg>
-                            <span>Analisar</span>
-                        </button>
+                        <div class="sm:col-span-1">
+                            <label for="load-session-input" class="w-full bg-slate-200 text-slate-700 font-semibold py-2.5 px-4 rounded-lg shadow-sm hover:bg-slate-300 transition-all duration-150 ease-in-out flex items-center justify-center gap-2 cursor-pointer">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.414l-1.293 1.293a1 1 0 01-1.414-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L13 9.414V13H5.5z" /><path d="M9 13h2v5a1 1 0 11-2 0v-5z" /></svg>
+                                <span>Carregar Sessão</span>
+                            </label>
+                            <input type="file" id="load-session-input" class="hidden" accept=".json">
+                        </div>
+                        <div class="sm:col-span-1 flex items-end">
+                            <button id="find-substitute-btn" class="w-full bg-indigo-600 text-white font-semibold py-2.5 px-4 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" /></svg>
+                                <span>Analisar</span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -131,14 +137,23 @@
             <div id="results-area">
                 <!-- Os resultados serão inseridos aqui dinamicamente -->
             </div>
-             <div id="loading-spinner" class="hidden text-center my-8">
-                <div class="inline-block animate-spin rounded-full h-10 w-10 border-b-2 border-indigo-600"></div>
-                <p class="mt-3 text-slate-600">Analisando horários...</p>
+            <div id="loading-spinner" class="hidden text-center my-8">
+                <div class="flex justify-center items-center space-x-2">
+                    <div class="dot dot-1"></div>
+                    <div class="dot dot-2"></div>
+                    <div class="dot dot-3"></div>
+                </div>
+                <p class="mt-4 text-slate-600 dark:text-slate-400">Analisando horários...</p>
             </div>
 
             <!-- Nova Seção: Lixeira -->
             <div id="trash-area" class="mt-12">
                 <!-- Conteúdo da lixeira será inserido aqui -->
+            </div>
+
+            <!-- Nova Seção: Log de Atividades -->
+            <div id="activity-log-area" class="mt-12">
+                <!-- Conteúdo do log será inserido aqui -->
             </div>
         </main>
     </div>
@@ -204,10 +219,6 @@
                         <option value="all">Filtrar por todas as áreas</option>
                         <!-- Opções de área serão populadas por JS -->
                     </select>
-                </div>
-                <div id="schedule-chart-container" class="mt-6 mb-8 p-4 border rounded-lg bg-slate-50/50">
-                    <h4 class="text-lg font-semibold text-slate-700 mb-3">Gráfico de Carga Horária Semanal</h4>
-                    <canvas id="workload-chart"></canvas>
                 </div>
                 <div id="schedule-grid-container" class="mt-6 overflow-x-auto">
                     <!-- A grade horária será inserida aqui -->
