--- a/index.html
+++ b/index.html
@@ -107,12 +107,18 @@
                             <option value="afternoon">Apenas Tarde</option>
                         </select>
                     </div>
-                    <div class="md:col-span-4 grid grid-cols-1 sm:grid-cols-3 gap-4 pt-2">
-                        <div class="sm:col-span-1 flex items-center">
-                            <input id="no-tcc-week-checkbox" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
-                            <label for="no-tcc-week-checkbox" class="ml-2 block text-sm font-medium text-slate-700">
-                                Semana sem TCC (+1 limite)
-                            </label>
+                    <div class="md:col-span-4 grid grid-cols-1 sm:grid-cols-4 gap-4 pt-2">
+                        <div class="sm:col-span-1 flex flex-col justify-center gap-2">
+                            <div class="flex items-center">
+                                <input id="no-tcc-week-checkbox" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+                                <label for="no-tcc-week-checkbox" class="ml-2 block text-sm font-medium text-slate-700">
+                                    Semana sem TCC (+1 limite)
+                                </label>
+                            </div>
+                            <div class="flex items-center">
+                                <input id="planning-mode-checkbox" type="checkbox" class="h-4 w-4 text-teal-600 border-gray-300 rounded focus:ring-teal-500">
+                                <label for="planning-mode-checkbox" class="ml-2 block text-sm font-medium text-slate-700">Modo Planejamento (sem limites)</label>
+                            </div>
                         </div>
                         <div class="sm:col-span-1">
                             <label for="load-session-input" class="w-full bg-slate-200 text-slate-700 font-semibold py-2.5 px-4 rounded-lg shadow-sm hover:bg-slate-300 transition-all duration-150 ease-in-out flex items-center justify-center gap-2 cursor-pointer">
@@ -121,7 +127,13 @@
                             </label>
                             <input type="file" id="load-session-input" class="hidden" accept=".json">
                         </div>
-                        <div class="sm:col-span-1 flex items-end">
+                        <div class="sm:col-span-2 flex items-end gap-3">
+                            <button id="clear-all-btn" class="w-full bg-slate-200 text-slate-700 font-semibold py-2.5 px-4 rounded-lg shadow-sm hover:bg-slate-300 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                    <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 110 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd" />
+                                </svg>
+                                <span>Limpar</span>
+                            </button>
                             <button id="find-substitute-btn" class="w-full bg-indigo-600 text-white font-semibold py-2.5 px-4 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" /></svg>
                                 <span>Analisar</span>
