--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
@@ -47,7 +48,7 @@
         <h2 id="welcome-message" class="text-2xl md:text-4xl font-bold text-white text-center"></h2>
     </div>
 
-    <div id="main-app" class="container mx-auto p-4 md:p-8 opacity-0 transition-opacity duration-500">
+    <div id="main-app" class="container mx-auto p-4 md:p-8 opacity-0 -translate-y-4">
         <header class="mb-8">
             <div class="flex items-center justify-between">
                 <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-slate-700 flex items-center gap-3">
@@ -55,10 +56,10 @@
                     <span>Alocador de Professores</span>
                 </h1>
                 <div class="flex items-center gap-1 sm:gap-2">
-                    <button id="open-schedule-btn" class="p-2 text-slate-500 hover:text-indigo-600 hover:bg-slate-200 rounded-full transition-colors" title="Ver Grade Horária Geral">
+                    <button id="open-schedule-btn" class="p-2 text-slate-500 rounded-full" title="Ver Grade Horária Geral">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" /></svg>
                     </button>
-                    <button id="open-settings-btn" class="p-2 text-slate-500 hover:text-indigo-600 hover:bg-slate-200 rounded-full transition-colors" title="Configurações">
+                    <button id="open-settings-btn" class="p-2 text-slate-500 rounded-full" title="Configurações">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                     </button>
                 </div>
@@ -68,20 +69,20 @@
 
         <main>
             <!-- Painel de Controle -->
-            <div class="bg-white/70 backdrop-blur-xl p-4 sm:p-6 rounded-xl shadow-lg mb-8 border border-slate-200">
+            <div class="control-panel p-4 sm:p-6 rounded-xl mb-8">
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
                     <div>
-                        <label for="area-filter" class="block text-sm font-medium text-slate-700 mb-1">1. Filtrar por Área</label>
-                        <select id="area-filter" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                        <label for="area-filter" class="block mb-1">1. Filtrar por Área</label>
+                        <select id="area-filter" class="w-full p-2 rounded-md shadow-sm">
                             <option value="all">Todas as áreas</option>
                         </select>
                     </div>
                     <div>
-                        <label for="absent-teachers" class="block text-sm font-medium text-slate-700 mb-1">2. Professor(es) Ausente(s)</label>
+                        <label for="absent-teachers" class="block text-sm font-medium text-slate-700 mb-1">2. Selecione o(s) Professor(es) Ausente(s)</label>
                         <div id="custom-multiselect-container" class="relative">
-                            <div id="absent-teachers-button" class="multiselect-button w-full p-2 border border-slate-300 rounded-lg shadow-sm bg-slate-100 text-slate-500 cursor-not-allowed flex items-center justify-between" aria-disabled="true">
-                                <span id="absent-teachers-display" class="truncate">Selecione uma área</span>
-                                <svg class="h-5 w-5 text-slate-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 3a.75.75 0 01.55.83l-3.25 9.5a.75.75 0 11-1.44-.49L8.46 4.2A.75.75 0 0110 3z" clip-rule="evenodd" /></svg>
+                            <div id="absent-teachers-button" class="multiselect-button w-full p-2 border border-slate-300 rounded-lg shadow-sm bg-white flex items-center justify-between" aria-disabled="false">
+                                <span id="absent-teachers-display" class="truncate">Clique para selecionar...</span>
+                                <svg class="h-5 w-5 text-slate-400 transition-transform duration-200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" /></svg>
                             </div>
                             <div id="absent-teachers-dropdown" class="hidden absolute z-10 mt-1 w-full bg-white shadow-lg max-h-60 rounded-md py-1 text-base ring-1 ring-black ring-opacity-5 overflow-auto focus:outline-none sm:text-sm">
                                 <!-- Opções com checkboxes serão populadas pelo JS -->
@@ -89,19 +90,12 @@
                         </div>
                     </div>
                     <div>
-                        <label for="absence-day" class="block text-sm font-medium text-slate-700 mb-1">3. Dia</label>
-                        <select id="absence-day" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
-                            <option value="">Selecione um dia</option>
-                            <option value="Segunda">Segunda-feira</option>
-                            <option value="Terça">Terça-feira</option>
-                            <option value="Quarta">Quarta-feira</option>
-                            <option value="Quinta">Quinta-feira</option>
-                            <option value="Sexta">Sexta-feira</option>
-                        </select>
+                        <label for="absence-date" class="block mb-1">3. Data da Ausência</label>
+                        <input type="date" id="absence-date" class="w-full p-2 rounded-md shadow-sm border border-slate-300">
                     </div>
                     <div>
-                        <label for="absence-period" class="block text-sm font-medium text-slate-700 mb-1">4. Período</label>
-                        <select id="absence-period" class="w-full p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                        <label for="absence-period" class="block mb-1">4. Período</label>
+                        <select id="absence-period" class="w-full p-2 rounded-md shadow-sm">
                             <option value="all">Dia Inteiro</option>
                             <option value="morning">Apenas Manhã</option>
                             <option value="afternoon">Apenas Tarde</option>
@@ -110,13 +104,13 @@
                     <div class="md:col-span-4 grid grid-cols-1 sm:grid-cols-4 gap-4 pt-2">
                         <div class="sm:col-span-1 flex flex-col justify-center gap-2">
                             <div class="flex items-center">
-                                <input id="no-tcc-week-checkbox" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+                                <input id="no-tcc-week-checkbox" type="checkbox">
                                 <label for="no-tcc-week-checkbox" class="ml-2 block text-sm font-medium text-slate-700">
                                     Semana sem TCC (+1 limite)
                                 </label>
                             </div>
                             <div class="flex items-center">
-                                <input id="planning-mode-checkbox" type="checkbox" class="h-4 w-4 text-teal-600 border-gray-300 rounded focus:ring-teal-500">
+                                <input id="planning-mode-checkbox" type="checkbox">
                                 <label for="planning-mode-checkbox" class="ml-2 block text-sm font-medium text-slate-700">Modo Planejamento (sem limites)</label>
                             </div>
                         </div>
@@ -134,7 +128,7 @@
                                 </svg>
                                 <span>Limpar</span>
                             </button>
-                            <button id="find-substitute-btn" class="w-full bg-indigo-600 text-white font-semibold py-2.5 px-4 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-all duration-150 ease-in-out flex items-center justify-center gap-2">
+                            <button id="find-substitute-btn" class="w-full text-white font-semibold flex items-center justify-center gap-2">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" /></svg>
                                 <span>Analisar</span>
                             </button>
@@ -150,10 +144,13 @@
                 <!-- Os resultados serão inseridos aqui dinamicamente -->
             </div>
             <div id="loading-spinner" class="hidden text-center my-8">
+                <!-- Div oculta para renderizar o resumo para a imagem -->
+                <div id="image-summary-render-area" class="hidden">
+                    <!-- Conteúdo para a imagem será injetado aqui -->
+                </div>
+
                 <div class="flex justify-center items-center space-x-2">
-                    <div class="dot dot-1"></div>
-                    <div class="dot dot-2"></div>
-                    <div class="dot dot-3"></div>
+                    <div class="dot"></div>
                 </div>
                 <p class="mt-4 text-slate-600 dark:text-slate-400">Analisando horários...</p>
             </div>
@@ -165,7 +162,14 @@
 
             <!-- Nova Seção: Log de Atividades -->
             <div id="activity-log-area" class="mt-12">
-                <!-- Conteúdo do log será inserido aqui -->
+                <div class="flex justify-between items-center mb-4">
+                    <h3 id="activity-log-title" class="text-xl font-bold text-slate-600 flex items-center gap-2 hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" /></svg>
+                        Log de Atividades
+                    </h3>
+                    <button id="export-log-btn" class="export-button hidden">Exportar Log</button>
+                </div>
+                <div id="activity-log-content"></div>
             </div>
         </main>
     </div>
@@ -220,16 +224,26 @@
             <div id="schedule-overlay" class="fixed inset-0 bg-black/40 backdrop-blur-sm" aria-hidden="true"></div>
             <div class="relative w-full max-w-7xl p-6 my-8 text-left bg-white shadow-xl rounded-2xl">
                 <div class="flex justify-between items-center pb-4 border-b border-slate-200">
-                    <h3 class="text-xl font-bold text-slate-800">Grade Horária Geral</h3>
-                    <button id="close-schedule-btn" class="p-2 text-slate-400 hover:text-slate-700 hover:bg-slate-100 rounded-full">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
-                    </button>
+                    <h3 id="schedule-modal-title" class="text-xl font-bold text-slate-800">Grade Horária Geral</h3>
+                    <div class="flex items-center gap-2">
+                        <button id="print-schedule-btn" class="p-2 text-slate-500 hover:text-slate-700 hover:bg-slate-100 rounded-full" title="Imprimir Grade">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm7-8a1 1 0 01-1-1v-1a1 1 0 011-1h2a1 1 0 011 1v1a1 1 0 01-1 1h-2z" /></svg>
+                        </button>
+                        <button id="close-schedule-btn" class="p-2 text-slate-400 hover:text-slate-700 hover:bg-slate-100 rounded-full">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
+                        </button>
+                    </div>
                 </div>
                 <div id="schedule-filters" class="mt-4 flex flex-col sm:flex-row gap-4 p-1">
-                    <input type="text" id="schedule-search-teacher" placeholder="🔎 Buscar por professor..." class="w-full sm:w-1/2 p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
-                    <select id="schedule-filter-area" class="w-full sm:w-1/2 p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                    <input type="text" id="schedule-search-teacher" placeholder="🔎 Buscar por professor..." class="w-full sm:w-1/3 p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                    <select id="schedule-filter-area" class="w-full sm:w-1/3 p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
                         <option value="all">Filtrar por todas as áreas</option>
                         <!-- Opções de área serão populadas por JS -->
+                    </select>
+                    <select id="schedule-filter-period" class="w-full sm:w-1/3 p-2 border border-slate-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500">
+                        <option value="all">Dia Inteiro</option>
+                        <option value="morning">Apenas Manhã</option>
+                        <option value="afternoon">Apenas Tarde</option>
                     </select>
                 </div>
                 <div id="schedule-grid-container" class="mt-6 overflow-x-auto">
